<resources>
    <string name="app_name">LatihanAndroid10PPLG2</string>
    <string name="img_desc">Foto Persipur</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>

    <array name="array_operation">
        <item>Tambah</item>
        <item>Kurang</item>
        <item>Kali</item>
        <item>Bagi</item>
    </array>

    <array name="food_name">
        <item>Ayam Geprek</item>
        <item>Nasi Padang</item>
        <item>Nasi Goreng</item>
        <item>Mie Ayam</item>
    </array>

    <array name="food_price">
        <item>Rp 10.000</item>
        <item>Rp 20.000</item>
        <item>Rp 12.000</item>
        <item>Rp 8.000</item>
    </array>

    <array name="food_img_src">
        <item>
            https://thumbs.dreamstime.com/b/ayam-geprek-indonesian-food-crispy-fried-chicken-hot-spicy-sambal-chili-sauce-served-steam-rice-recipe-currently-found-215159621.jpg
        </item>
        <item>https://asset-a.grid.id/crop/0x0:0x0/700x465/photo/2020/03/08/2952338668.png</item>
        <item>https://giwang.sumselprov.go.id/api/uploads/kuliner/kuliner_168654009895837.png</item>
        <item>
            https://static.promediateknologi.id/crop/0x0:0x0/750x500/webp/photo/p1/659/2023/09/27/Instagram-jnyfoodjournal-2-1474089729.png
        </item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amit_kumar">Amit Kumar</string>
    <string name="bio">As an Android app developer, I have a passion for creating beautiful and functional apps for users. I write code primarily in Kotlin, which is a popular programming language for Android development. My focus is on creating a visually appealing and intuitive user experience that makes using the app a pleasure.</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="user_information">User Information</string>
    <string name="username_">Username</string>
    <string name="amitthecoder">amitthecoder</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="age">Age</string>
    <string name="_21">21</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="_07_02_2003">07/02/2003</string>
    <string name="mobile">Mobile</string>
    <string name="_91_9000000009">+91 9000000009</string>
    <string name="email">Email</string>
    <string name="axxxxxxa_gmail_com">axxxxxxa@gmail.com</string>
    <string name="social_media">Social Media</string>
</resources>